# fastapi-users

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  documentation.yml  fastapi-users-lib-release.yml  pr-tests.yml
docs/source/: index.rst  submodule.rst
src/filuta_fastapi_users/: __init__.py  fastapi_users.py  jwt.py  manager.py  models.py  password.py  schemas.py  types.py
src/filuta_fastapi_users/authentication/: authenticator.py  backend.py
src/filuta_fastapi_users/authentication/mfa/: otp_manager.py
src/filuta_fastapi_users/authentication/refresh_token/: refresh_token_manager.py
src/filuta_fastapi_users/authentication/strategy/: base.py
src/filuta_fastapi_users/authentication/strategy/db/: __init__.py  adapter.py  models.py  strategy.py
src/filuta_fastapi_users/authentication/transport/: base.py  bearer.py
src/filuta_fastapi_users/db/: base.py
src/filuta_fastapi_users/filuta_uds/: __init__.py  access_token.py  otp_token.py  refresh_token.py
src/filuta_fastapi_users/refresh_token/: refresh_token_manager.py
src/filuta_fastapi_users/router/: auth.py  common.py  forgot_password.py  oauth.py  otp_router.py  register.py  reset.py  users.py  verify.py
tests/: conftest.py  test_e2e.py  test_package.py
tests/filuta_fastapi_users/: test_bearer_transport.py  test_exceptions.py  test_jwt.py  test_password.py  test_schemas.py
