[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filuta_fastapi_users"
description = "Filuta fork of fastapi-users to include OTP natively"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dynamic = ["version"]
authors = [
    { name = "Josef Ryzi", email = "josef@filuta.ai" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.136.3",
    "httpx-oauth>=0.17.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.29",
    "makefun>=1.16.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "build>=1.5.0",
    "cruft>=2.16.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "coverage>=7.14.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.15",
    "tox>=4.55.0",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "filuta_fastapi_users.__version__" }

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

env = [
    "PROFILE=TEST"
]

addopts = [
    "-v",
    "--cov=filuta_fastapi_users",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.14"
plugins = [
    "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fastapi_users_db_sqlalchemy.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120

lint.select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "C90", # McCabe
    "I", # isort
    "UP", # pyupgrade
    "PLC", "PLE", "PLR", "PLW", # Pylint
]

lint.ignore = [
    # pycodestyle:
    "E501", # Line too long (covered by Black)
    "PLR0913" # too many function parameters
]

lint.per-file-ignores = { "tests/**/*.py" = ["PLR2004"] }

fix = true
output-format = "grouped"
target-version = "py314"

[tool.ruff.lint.isort]
# Note: Ruff implicitly uses `profile = "black"`
combine-as-imports = true

[tool.cruft]
skip = [
    ".env",
    ".python-version",
    "filuta_fastapi_users/__init__.py",
]
